# MyScaleDB

./: .gitignore  .gitlab-ci-chaos-test.yml  .gitlab-ci-functional-test.yml  .gitlab-ci-integration-test.yml  .gitlab-ci-sanitizer-test.yml  .gitlab-ci-unit-test.yml  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  MYSCALE_CHANGELOG.md  README.md
assets/amazon-ami/: README.md  aws-ubuntu_20_04.pkr.hcl
cmake/: autogenerated_myscale_versions.txt  dbms_glob_sources.cmake  version.cmake
contrib/: CMakeLists.txt
contrib/aws-cmake/: CMakeLists.txt
contrib/croaring-cmake/: CMakeLists.txt
docker/builder/: Dockerfile  README.md  build.py  cargo.config.toml
docker/myscale/: Dockerfile  entrypoint.sh
docker/myscale-runtime/: Dockerfile  build.sh
docker/myscale_test_script/: check-job-states.sh  fuzz-test.sh  init-env.sh  performance-test.sh  run-test.sh  s3downloader  sqlancer-test.sh  sqltest-test.sh  stateful-test.sh  stateless-test.sh  stress-test.sh  unit-test.sh
docker/myscaledb/: Dockerfile  README.md
programs/: CMakeLists.txt
programs/keeper/: Keeper.cpp
programs/local/: LocalServer.cpp
programs/server/: CMakeLists.txt  Server.cpp
programs/server/license/: AMILicenseCheck.cpp  AMILicenseCheck.h  ClusterLicenseCheck.cpp  ClusterLicenseCheck.h  LicenseCheck.cpp  LicenseCheck.h  LicenseHeaders.h  LicenseUtil.h  StandAloneLicenseCheck.h
rust/workspace/: CMakeLists.txt  Cargo.toml
rust/workspace/.cargo/: config.toml.in
rust/workspace/skim/: Cargo.toml
rust/workspace/supercreate/: Cargo.toml
rust/workspace/supercreate/src/: lib.rs
scripts/: config_on_linux.sh  install_deps.sh
scripts/changelog/: README.md  config.py  github_helper.py  gitlab_helper.py  myscale_changelog.py  sync_release_note.py
src/: CMakeLists.txt  configure_config.cmake
src/Access/: IAccessEntity.h  UsersConfigAccessStorage.cpp
src/Columns/: ColumnArray.cpp
src/Common/: Allocator.cpp  AsynchronousMetrics.cpp  AsynchronousMetrics.h  CacheBase.h  CurrentMetrics.cpp  ErrorCodes.cpp  FieldVisitorWriteBinary.cpp  LRUResourceCache.h  ProfileEvents.cpp  SystemLogBase.cpp  SystemLogBase.h  config.h.in
src/Core/: Block.h  ServerSettings.h  Settings.h  SettingsEnums.h
src/DataTypes/: DataTypeArray.cpp
src/Databases/: DatabaseOnDisk.cpp  DatabasesCommon.cpp
src/Functions/: FunctionsHashing.h
src/Interpreters/: ActionLocksManager.cpp  ActionsDAG.cpp  ActionsDAG.h  ActionsVisitor.cpp  ActionsVisitor.h  Context.cpp  Context.h  DatabaseCatalog.cpp  ExpressionActions.cpp  ExpressionActions.h  ExpressionAnalyzer.cpp  ExpressionAnalyzer.h  GetAggregatesVisitor.h  InterpreterAlterQuery.cpp  InterpreterCreateIndexQuery.cpp  InterpreterCreateQuery.cpp  InterpreterCreateQuery.h  InterpreterDeleteQuery.cpp  InterpreterDropIndexQuery.cpp  InterpreterDropQuery.cpp  (+23 more)
src/VectorIndex/: CMakeLists.txt
src/VectorIndex/Cache/: CachedSegment.h  CachedSegmentKey.h  PKCacheManager.cpp  PKCacheManager.h  VICacheManager.cpp  VICacheManager.h
src/VectorIndex/Common/: BM25InfoInDataParts.cpp  BM25InfoInDataParts.h  BruteForceSearch.h  MergedPartNameAndId.h  ScanThreadLimiter.h  Segment.cpp  Segment.h  SegmentInfo.h  SegmentStatus.h  SegmentsMgr.cpp  SegmentsMgr.h  StorageVectorIndicesMgr.cpp  StorageVectorIndicesMgr.h  TempVIHolder.h  VIBuildMemoryUsageHelper.cpp  VIBuildMemoryUsageHelper.h  VICommands.cpp  VICommands.h  VICommon.h  VIException.h  VIPartReader.cpp  VIPartReader.h  VectorDataset.h  VectorIndexIO.h  VectorIndexObject.cpp  VectorIndexObject.h  VectorIndicesMgr.cpp  VectorIndicesMgr.h
src/VectorIndex/Interpreters/: GetHybridSearchVisitor.h  VIEventLog.cpp  VIEventLog.h  parseVSParameters.cpp  parseVSParameters.h
src/VectorIndex/Parsers/: ASTVIDeclaration.cpp  ASTVIDeclaration.h
src/VectorIndex/Processors/: FusionSortingStep.cpp  FusionSortingStep.h  HybridSearchFusionTransform.cpp  HybridSearchFusionTransform.h  ReadWithHybridSearch.cpp  ReadWithHybridSearch.h
src/VectorIndex/Storages/: HybridSearchResult.h  MergeTreeBaseSearchManager.cpp  MergeTreeBaseSearchManager.h  MergeTreeHybridSearchManager.cpp  MergeTreeHybridSearchManager.h  MergeTreeSelectWithHybridSearchProcessor.cpp  MergeTreeSelectWithHybridSearchProcessor.h  MergeTreeTextSearchManager.cpp  MergeTreeTextSearchManager.h  MergeTreeThreadSelectWithFilterAlgorithm.h  MergeTreeVSManager.cpp  MergeTreeVSManager.h  MergeTreeWithVectorScanSource.cpp  MergeTreeWithVectorScanSource.h  ReplicatedMergeTreeBuildVIStrategyPicker.cpp  ReplicatedMergeTreeBuildVIStrategyPicker.h  ReplicatedVITask.cpp  ReplicatedVITask.h  StorageFtsIndex.cpp  StorageFtsIndex.h  StorageFullTextSearch.cpp  StorageFullTextSearch.h  StorageSystemVIs.cpp  StorageSystemVIs.h  StorageSystemVIsWithPart.cpp  StorageSystemVIsWithPart.h  VIDescriptions.cpp  VIDescriptions.h  VIEntry.h  VITask.cpp  VITask.h  VITaskBase.cpp  VITaskBase.h  VSDescription.h
src/VectorIndex/TableFunctions/: TableFunctionFtsIndex.cpp  TableFunctionFtsIndex.h  TableFunctionFullTextSearch.cpp  TableFunctionFullTextSearch.h
src/VectorIndex/Utils/: CommonUtils.cpp  CommonUtils.h  HybridSearchUtils.cpp  HybridSearchUtils.h  MergeIdMaps.cpp  MergeIdMaps.h  VIUtils.cpp  VIUtils.h  VSUtils.cpp  VSUtils.h
tests/: clickhouse-test
(+362 files in other folders)
